# jsonc-daccord

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: jdac_internal.h  jdac_optional.h  jsoncdaccord.h
libjsoncdac/: CMakeLists.txt  additionalproperties.c  contains.c  dependent.c  download.c  jdac-cli.c  output.c  pattern.c  patternproperties.c  propertynames.c  ref.c  regex_match.c  store.c  subschemalogic.c  validate.c
tests/: CMakeLists.txt  common.h  test-dependent.c  test-flows.c  test-suite-side-tests.c  test-validate.c  test_runner.c
